Start adding routes, pages, and components
As I write this, I am moments away from ridding the main branch of
Tailwind and Skeleton. I wanted this here, however, despite not having
committed it before, just in case. You never know what might happen.
Plus getting rid of the Tailwind/Skeleton stuff might be more trouble
than I expect, so it would be good to have this basic mostly-working
example.

Side note: the reason I'm getting rid of them is just because it's a lot
of mental overhead. I've found myself feeling pretty discouraged about
doing more work here and that largely comes down to not wanting to
fiddle with that stuff. A simpler plain-HTML approach will surely be
good for me at the start. Might even stick with it in the long run;
there's definitely a lot more customization and fun to be had that way.
More frustration, too, at times, but in my personal experience I think
there will be less than there would be in trying to use some CSS
framework.

Oops. The side note was longer than the other parts.

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,3 +7,8 @@
   --theme-font-family-base: "Inter", sans-serif;
   --theme-font-family-heading: "Inter", sans-serif;
 }
+
+html,
+body {
+  @apply h-full overflow-hidden;
+}
